# macos-powertools

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  NOTES.md  README.md
.github/: dependabot.yml
.github/workflows/: python-ci.yml  shell-ci.yml
py/: README.md  pyproject.toml
py/src/macos_powertools/brew/: __init__.py
py/src/macos_powertools/brew/service_pids/: __main__.py
py/src/macos_powertools/cli/brew_service_pids/: __init__.py  __main__.py
py/src/macos_powertools/cli/ollama_run/: __main__.py
py/src/macos_powertools/homebrew/services/: __init__.py
py/src/macos_powertools/lib/: logging.py
py/tests/macos_powertools/brew/: test_service_pids.py
py/tests/macos_powertools/cli/: test_brew_service_pids.py  test_ollama_run.py
py/tests/macos_powertools/homebrew/: test_services.py
py/tests/macos_powertools/homebrew/lib/: test_logging.py
shell/: CMakeLists.txt  brew-autoupdate  mute-speaker  run_ollama  set-remote-power-settings  show-hidden-files-in-finder  viexports  zzz
